Added new email and password verification
